--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,6 @@ project(traffic_sign)
 # ----------------------------------------------------------------------
 # Site specific configurations
 
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
+set(CMAKE_BUILD_TYPE "Release")
 add_subdirectory(./app)
 
